--- a/src/App.css
+++ b/src/App.css
@@ -3,13 +3,12 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: fit-content;
-  width: 60%;
-  min-width: 25rem;
   text-align: center;
   background-color: rgba(255, 255, 255, 0.741);
   color: #000;
   margin: 2% auto;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  max-height: 65%;
+  max-width: 25%;
 }
