--- a/src/App.css
+++ b/src/App.css
@@ -4,11 +4,12 @@
   align-items: center;
   justify-content: center;
   text-align: center;
-  background-color: rgba(255, 255, 255, 0.741);
-  color: #000;
+  background-color: #353942;
+  color: rgba(16, 185, 129, 1);
   margin: 2% auto;
   border-radius: 10px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  box-shadow: 0 0 10px rgba(16, 185, 129, 1);
   max-height: 65%;
   max-width: 25%;
+  font-family: "Roboto", sans-serif;
 }
