--- a/src/components/About.css
+++ b/src/components/About.css
@@ -1,10 +1,19 @@
 .About {
-  background-color: #fff;
-  color: #000;
+  background-color: #353942;
+  color: rgb(110, 180, 156);
   padding: 20px;
   border-radius: 10px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-  margin: 0 5% 5% 5%;
+  box-shadow: 0 0 10px rgba(16, 185, 129, 1);
+  margin: 5% 8% 8% 8%;
   height: fit-content;
   font-size: 1rem;
+}
+
+.About h3 {
+  font-size: 1.15rem;
+  margin: 0 0 5% 0;
+}
+
+.About p {
+  margin-bottom: 6%;
 }
