--- a/src/components/Socials.css
+++ b/src/components/Socials.css
@@ -4,7 +4,7 @@
   justify-content: space-around;
   width: 80%;
   font-size: 2rem;
-  color: #000;
+  color: rgba(16, 185, 129, 1);
   margin-bottom: 3%;
 }
 
